--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class=" col-12 text-center mb-3">
                 <h1>CONVERSOR DE DIVISAS</h1>
                 <div>
-                    <img src="/images/icono.jpg" width="100" class="img-fluid rounded-circle mb-3">
+                    <img src="./images/icono.jpg" width="100" class="img-fluid rounded-circle mb-3">
                     <input type="number" id="cantidad" class="form-control text-center fs-3"
                         placeholder="Ingrese el valor a convertir">
                 </div>
